correct the sotre swagger codeo for mailinglist controller
